--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "tw-animate-css": "^1.4.0"
   },
   "dependencies": {
+    "@astrojs/node": "^9.5.1",
     "astro": "^5.16.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
