feat: send email with resend and astro actions

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,14 @@ GITHUB_CLIENT_SECRET=
 # For public repos you can use: public_repo
 # GITHUB_OAUTH_SCOPE=public_repo
 
+# Resend (email provider)
+# Get your API key at https://resend.com/api-keys
+RESEND_API_KEY=
+
+# Email addresses
+# From must be a verified sender/domain in Resend (e.g., "Personal Shopper <contact@your-domain.com>")
+EMAIL_FROM=
+# One or more comma-separated recipients (e.g., owner@example.com,assistant@example.com)
+EMAIL_TO=
+# Optional: comma-separated BCC recipients
+# EMAIL_BCC=
