--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "decap-cms-app": "^3.9.0",
     "lucide-react": "^0.562.0",
     "lucide-static": "^0.562.0",
+    "resend": "^6.6.0",
     "simple-icons": "^16.3.0",
     "tailwind-merge": "^3.4.0"
   }
