--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "personal-shopper-landing-page",
+  "name": "landing-page",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
